--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>1010 Mini Project Quote</description>
 	<properties>
 		<java.version>18</java.version>
-		<spring-cloud.version>2021.0.4</spring-cloud.version>
+		<!-- <spring-cloud.version>2021.0.4</spring-cloud.version> -->
 	</properties>
 
 	<dependencies>
